--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@
 version: 0.2
 
 env:
-     parameter-store:
-     JWT_SECRET: JWT_SECRET
+     parameter-store:         
+       JWT_SECRET: JWT_SECRET
 
 phases:
   install:
@@ -40,4 +40,6 @@ phases:
       - kubectl apply -f simple_jwt_api.yml 
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
-  files: build.json
+  files: 
+    - '**/*'
+    #build.json
